<resources>
    <string name="app_name">BluetoothTest</string>
    <string name="app_version" translatable="false">0.21a</string>
    <string name="db_version" translatable="false">10</string>
    <string name="dbname" translatable="false">spma</string>
    <string-array name="dbcreate">
        <item>
            create table if not exists User(
                ID integer primary key autoincrement,
                Name varchar(40),
                AES varchar(256),
                RSAPrivate varchar(512),
                RSAPublic varchar(512)
            )
        </item>
        <item>
            create table if not exists Devices(
                ID integer primary key autoincrement,
                Address varchar(17) not null,
                DeviceName varchar(40),
                FriendlyName varchar(40),
                Paired integer not null,
                LastSeen integer default CURRENT_TIMESTAMP
            )
        </item>
        <item>
            create table if not exists Friends(
                ID integer primary key autoincrement,
                UserID integer not null,
                DeviceID integer not null,
                foreign key(UserID) references User(ID),
                foreign key(DeviceID) references Devices(ID)
            )
        </item>
        <item>
            create table if not exists Send(
                ID integer primary key autoincrement,
                Text varchar(1024) not null,
                Timestamp integer default CURRENT_TIMESTAMP,
                UserID integer not null,
                DeviceID integer not null,
                foreign key(UserID) references User(ID),
                foreign key(DeviceID) references Devices(ID)
            )
        </item>
        <item>
            create table if not exists Received(
                ID integer primary key autoincrement,
                Text varchar(1024) not null,
                Timestamp integer default CURRENT_TIMESTAMP,
                UserID integer not null,
                DeviceID integer not null,
                foreign key(UserID) references User(ID),
                foreign key(DeviceID) references Devices(ID)
            )
        </item>
        <item>
            create table if not exists AES(
                ID integer primary key autoincrement,
                Key varchar(256),
                DeviceID integer not null,
                foreign key(DeviceID) references Devices(ID)
            )
        </item>
        <item>
            create table if not exists RSA(
                ID integer primary key autoincrement,
                Key varchar(256),
                DeviceID integer not null,
                foreign key(DeviceID) references Devices(ID)
            )
        </item>
    </string-array>
    <string-array name="dbdrop">
        <item>
            drop table if exists RSA
        </item>
        <item>
            drop table if exists AES
        </item>
        <item>
            drop table if exists Received
        </item>
        <item>
            drop table if exists Send
        </item>
        <item>
            drop table if exists Friends
        </item>
        <item>
            drop table if exists Devices
        </item>
        <item>
            drop table if exists User
        </item>
    </string-array>
    <string name="scan">Scan</string>
    <string name="btNotSupported">Bluetooth not supported</string>
    <string name="btNotEnabled">Bluetooth not enabled</string>
    <string name="uuid_insecure">d453cc08-615b-4300-b802-ccb61927aca9</string>
    <string name="uuid_secure">cb918f7b-0550-41c5-a4e3-e75df009a82e</string>
    <string name="startBTserver">Start Bluetooth Server</string>
    <string name="stopBTserver">Stop Bluetooth listeners</string>
    <string name="send">Send</string>
    <string name="connectionRequested">Connection requested</string>
    <string name="connectionFailed">Connection failed</string>
    <string name="connectionRetrieved">Connection retrieved</string>
    <string name="connectionReady">Connection ready</string>
    <string name="connectionShutdown">Connection shutdown</string>
    <string name="BGSNotificationTitle">SPMA Service</string>
    <string name="BGSNotificationText">Service is currently running</string>
    <string name="menuProfile">Profile</string>
    <string name="menuSettings">Settings</string>
    <string name="actionSettings">Settings</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="startChatFailed">Could not start chat</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_social_background_service">Background Service</string>
    <string name="pref_description_background_services">Turn the service on and off</string>
    <string name="pref_header_bt">Bluetooth</string>
    <string name="pref_description_bt">Turns Bluetooth on and off</string>
    <string name="pref_title_bt">Bluetooth</string>
    <string name="pref_description_discoverable">Makes the device visible to other devices</string>
    <string name="pref_title_discoverable">Visible</string>
    <string name="pref_description_acp_connections">Accept incoming connections</string>
    <string name="pref_title_acp_connections">New connections</string>
    <string name="pref_title_clr_device_cache">Clear cached devices</string>
    <string name="pref_description_clr_device_cache">Delete device cache. This will also delete all saved encryption keys from cached devices.</string>
    <string name="pref_title_clr_chat_hist">Clear chat history</string>
    <string name="pref_description_clr_chat_hist">Clear local chat history</string>
    <string name="pref_description_friend_list">Manage a list of the devices you wish to show up as friends</string>
    <string name="pref_title_friend_list">Friends list</string>
    <string name="pref_header_chat">Chat</string>
    <string name="pref_title_clr_crypt_keys_foreign">Delete foreign crypto keys</string>
    <string name="pref_description_clr_crypt_keys_foreign">Delete saved foreign crypto keys. Keys must be re-exchanged. This happens automatically.</string>
    <string name="pref_description_clr_crypt_keys_local">Delete my crypto keys and force regenerating them</string>
    <string name="pref_title_clr_crypt_keys_local">Delete my crypto keys</string>
    <string name="pref_header_enc">Encryption</string>
    <string name="pref_summary_display_name">Change your users name. This name will be displayed on other devices in front of your messages.</string>
    <string name="nearby">Nearby</string>
    <string name="friends">Friends</string>
    <string name="chats">Chats</string>
</resources>