<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference
        android:defaultValue="true"
        android:key="bt_on"
        android:summary="@string/pref_description_bt"
        android:title="@string/pref_title_bt" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="bt_discoverable_on"
        android:summary="@string/pref_description_discoverable"
        android:title="@string/pref_title_discoverable" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="bt_listeners_on"
        android:summary="@string/pref_description_acp_connections"
        android:title="@string/pref_title_acp_connections" />
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        android:summary="" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="bgs_on"
        android:summary="@string/pref_description_background_services"
        android:title="@string/pref_title_social_background_service" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"

        android:summary=""
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
