<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        android:summary="@string/pref_summary_display_name" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="bgs_on"
        android:summary="@string/pref_description_background_services"
        android:title="@string/pref_title_social_background_service" />


</PreferenceScreen>
