<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <CheckBoxPreference
        android:defaultValue="false"
        android:key="bt_clr_chat_hist"
        android:summary="@string/pref_description_clr_chat_hist"
        android:title="@string/pref_title_clr_chat_hist" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="bgs_on"
        android:summary="@string/pref_description_background_services"
        android:title="@string/pref_title_social_background_service" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"

        android:summary=""
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
