<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.dralle.bluetoothtest.GUI.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="de.dralle.bluetoothtest.GUI.SettingsActivity$BluetoothPreferenceFragment"
        android:title="@string/pref_header_bt" />
    <header
        android:fragment="de.dralle.bluetoothtest.GUI.SettingsActivity$ChatPreferenceFragment"
        android:icon="@drawable/chat_48"
        android:title="@string/pref_header_chat" />
    <header
        android:fragment="de.dralle.bluetoothtest.GUI.SettingsActivity$EncryptionPreferenceFragment"
        android:title="@string/pref_header_enc" />

</preference-headers>
